[package]
name = "llhd-blaze"
version = "0.1.0"
authors = ["Fabian Schuiki <fabian@schuiki.ch>"]
edition = "2018"

[dependencies]
llhd = { git = "https://github.com/fabianschuiki/llhd", rev = "ccc27e4" }
clap = "2"
log = { version = "0.4", features = ["release_max_level_info"] }
stderrlog = "0.4"
anyhow = "1"
llvm-sys = "80"
num = "0.2"
hibitset = "0.6"
codespan = "0.7"

[profile.release]
debug = true
